# iPlug2

./: .gitignore  CLAUDE.md  CMakeLists.txt  common-win.props  iPlug2.cmake
Dependencies/: CMakeLists.txt
Dependencies/IGraphics/: CMakeLists.txt
Dependencies/IPlug/: download-vst3-sdk.sh
Examples/IPlugChunks/projects/IPlugChunks-macOS.xcodeproj/: project.pbxproj
Examples/IPlugCocoaUI/projects/IPlugCocoaUI-macOS.xcodeproj/: project.pbxproj
Examples/IPlugControls/: CMakeLists.txt
Examples/IPlugControls/projects/IPlugControls-macOS.xcodeproj/: project.pbxproj
Examples/IPlugControls/resources/: resource.h
Examples/IPlugConvoEngine/projects/IPlugConvoEngine-macOS.xcodeproj/: project.pbxproj
Examples/IPlugDrumSynth/projects/IPlugDrumSynth-macOS.xcodeproj/: project.pbxproj
Examples/IPlugEffect/: CMakeLists.txt  IPlugEffect.h
Examples/IPlugEffect/projects/IPlugEffect-macOS.xcodeproj/: project.pbxproj
Examples/IPlugInstrument/projects/IPlugInstrument-macOS.xcodeproj/: project.pbxproj
Examples/IPlugMidiEffect/projects/IPlugMidiEffect-macOS.xcodeproj/: project.pbxproj
Examples/IPlugOSCEditor/projects/IPlugOSCEditor-macOS.xcodeproj/: project.pbxproj
Examples/IPlugP5js/projects/IPlugP5js-macOS.xcodeproj/: project.pbxproj
Examples/IPlugReaperPlugin/projects/IPlugReaperPlugin-macOS.xcodeproj/: project.pbxproj
Examples/IPlugResponsiveUI/projects/IPlugResponsiveUI-macOS.xcodeproj/: project.pbxproj
Examples/IPlugSideChain/projects/IPlugSideChain-macOS.xcodeproj/: project.pbxproj
Examples/IPlugSurroundEffect/projects/IPlugSurroundEffect-macOS.xcodeproj/: project.pbxproj
Examples/IPlugSvelteUI/projects/IPlugSvelteUI-macOS.xcodeproj/: project.pbxproj
Examples/IPlugSwiftUI/projects/IPlugSwiftUI-macOS.xcodeproj/: project.pbxproj
Examples/IPlugVisualizer/projects/IPlugVisualizer-macOS.xcodeproj/: project.pbxproj
Examples/IPlugWebUI/projects/IPlugWebUI-macOS.xcodeproj/: project.pbxproj
IGraphics/: CMakeLists.txt  IGraphics.cpp  IGraphics.h  IGraphicsStructs.h
IGraphics/Extras/: IGraphicsFlexBox.cpp
IPlug/: CMakeLists.txt
IPlug/APP/: IPlugAPP_main.cpp  IPlugAPP_main.mm
IPlug/AUv2/: dfx-au-utilities.h
IPlug/Extras/PlatformView/: IPlugPlatformView.mm
IPlug/Extras/WebView/: IPlugWebViewEditorDelegate.cpp
IPlug/ReaperExt/: ReaperExt_include_in_plug_src.h
Scripts/: create_bundle.bat
Scripts/cmake/: APP.cmake  FindiPlug2.cmake  VST3.cmake
WDL/: CMakeLists.txt
WDL/swell/: CMakeLists.txt  swell-internal.h
